# python-middle-up

./: .env.example  README.md  pyproject.toml
src/: README.md
src/asyncio_tasks/: async_func.md  async_http_request.py  async_http_request_advanced.py  async_test.txt  common_async_tasks_1_20.py  common_async_tasks_1_20.txt  common_async_tasks_21_40.md  common_async_tasks_21_40.py  results.json  results.jsonl  results2.jsonl  urls.txt
src/basic/: README.md  main.py
src/big_o/: searching_item_in_ordered_list.py
src/classes/: metaclass_attributes.py  singletone_as_default_module.py  singletone_by_import.py  singletone_by_meta.py  singletone_by_new.py
src/databases/: README.md
src/decorators/: lru_cache.py
src/frameworks/: README.md
src/http_requests/: README.md  raw_query.http
src/multiprocessing_/: generate_data.py  multiprocessing_numeric_data.py  results.json
src/redis_/: distributed_lock.py  redis_queue.py
src/threading/: threading_race_conditions.py
src/threading_/: threading_race_conditions.py
src/wsgi_asgi/: README.md  asgi_wsgi_proxy_currency_rates.py  generated-requests.http  http-client.env.json
