[project]
name = "python-grade-up"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "asyncio>=3.4.3",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-aiofiles>=24.1.0.20241221",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
