[project]
name = "python-grade-up"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "asyncio>=3.4.3",
    "django>=5.1.6",
    "dotenv>=0.9.9",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "psycopg2>=2.9.10",
    "redis>=5.2.1",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "types-aiofiles>=24.1.0.20241221",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
